Update image registry in GitHub Actions workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
       id: meta
       uses: docker/metadata-action@v5
       with:
-        images: ${{ env.REGISTRY }}/xsembystrm
+        images: xsembystrm
         tags: |
           type=ref,event=branch
           type=ref,event=pr
